@@ -22,7 +22,7 @@ extern _rha_ any_t     list_last(list_t);
 extern _rha_ any_t     list_popfirst(list_t);
 extern _rha_ any_t     list_poplast(list_t);
 
-extern list_t list_insert_sorted(list_t, any_t, bool (*)(any_t, any_t));
+extern _ignore_ list_t list_insert_sorted(list_t, any_t, bool (*)(any_t, any_t));
 
 // iterator stuff for use in C with MACRO
 extern _rha_ list_it_t list_begin(list_t l);
@@ -31,11 +31,11 @@ extern _rha_ void      list_next(list_it_t i);
 extern _rha_ any_t  list_get(list_it_t i);
 
 // only for parse.c and prules.c
-extern list_t list_chop(list_t l, symbol_t s);
-extern list_t list_chop_first(list_t l, symbol_t s);
-extern list_t list_chop_first_list(list_t l, glist_t *sym_list);
-extern list_t list_chop_last(list_t l, symbol_t s);
-extern list_t list_chop_last_list(list_t l, glist_t *sym_list);
-extern list_t list_chop_matching(list_t l, symbol_t left, symbol_t right);
+extern _ignore_ list_t list_chop(list_t l, symbol_t s);
+extern _ignore_ list_t list_chop_first(list_t l, symbol_t s);
+extern _ignore_ list_t list_chop_first_list(list_t l, glist_t *sym_list);
+extern _ignore_ list_t list_chop_last(list_t l, symbol_t s);
+extern _ignore_ list_t list_chop_last_list(list_t l, glist_t *sym_list);
+extern _ignore_ list_t list_chop_matching(list_t l, symbol_t left, symbol_t right);
 
 #endif
