@@ -73,14 +73,14 @@ extern _rha_ any_t   dec(any_t);
 extern _rha_ any_t   inc_copy(any_t);
 extern _rha_ any_t   dec_copy(any_t);
 
-extern       any_t   wrap_int(int ptype, int i);
-extern       any_t   wrap_double(int ptype, double d);
-extern       any_t   wrap_builtin(int ptype, builtin_t b);
-extern       any_t   wrap_ptr(int ptype, void *p);
-extern       int        unwrap_int(int ptype, any_t o);
-extern       double     unwrap_double(int ptype, any_t o);
-extern       builtin_t  unwrap_builtin(int ptype, any_t o);
-extern       void      *unwrap_ptr(int ptype, any_t o);
+extern _ignore_ any_t   wrap_int(int ptype, int i);
+extern _ignore_ any_t   wrap_double(int ptype, double d);
+extern _ignore_ any_t   wrap_builtin(int ptype, builtin_t b);
+extern _ignore_ any_t   wrap_ptr(int ptype, void *p);
+extern _ignore_ int        unwrap_int(int ptype, any_t o);
+extern _ignore_ double     unwrap_double(int ptype, any_t o);
+extern _ignore_ builtin_t  unwrap_builtin(int ptype, any_t o);
+extern _ignore_ void      *unwrap_ptr(int ptype, any_t o);
 
 
 //        z          -> lookup(local, \z);
